# forgottenserver-downgrade-1.8-8.60

./: .appveyor.yml  .codacy.yml  .coderabbit.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  Jenkinsfile  README.md  bench.sh  build.sh  compile_commands.json  config.lua.dist  deploy.sh  pr_body.md  schema.sql  setup-jenkins.sh  stress-test-results.html  vcpkg.json
.github/workflows/: benchmarks.yml  build-vcpkg.yml  build.yml  claude-code-review.yml  docker-image.yml
cdocs/: augments.md
data/: server_config.lua
data/XML/: stagesresets.xml  vocations.xml
data/items/: items.xml  proficiencies.json
data/migrations/: 39.lua  40.lua  41.lua  46.lua  47.lua  48.lua  49.lua  50.lua  51.lua  52.lua
data/raids/: dragonsMountain.xml  raids.xml  (+1 more)
doc/: RESET_SYSTEM.md
docs/: augments.md  database-threaded-login-save.md  kv.md  lua-garbage-collector.md
src/: CMakeLists.txt  actions.cpp  bed.cpp  chat.cpp  chat.h  combat.cpp  combat.h  condition.cpp  condition.h  configmanager.cpp  configmanager.h  connection.cpp  const.h  container.cpp  container.h  creature.cpp  creature.h  creatureevent.cpp  cylinder.h  database.cpp  database.h  databasetasks.cpp  databasetasks.h  decay.cpp  depotchest.cpp  depotchest.h  enums.h  events.cpp  game.cpp  game.h  globalevent.cpp  house.cpp  housetile.cpp  housetile.h  instance_utils.h  iologindata.cpp  iologindata.h  iomap.cpp  iomap.h  item.cpp  (+83 more)
src/benchs/: CMakeLists.txt  bench_tools.cpp
tools/: cmake-linux-env.sh  run-asan.sh  run-valgrind.sh
vc18/: theforgottenserver.vcxproj  theforgottenserver.vcxproj.filters
(+201 files in other folders)
